--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
       <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-6">
         <div class="p-4 bg-gray-700 rounded shadow hover-glow">Java</div>
         <div class="p-4 bg-gray-700 rounded shadow hover-glow">OOP</div>
+        <div class="p-4 bg-gray-700 rounded shadow hover-glow">Python</div>
         <div class="p-4 bg-gray-700 rounded shadow hover-glow">MySQL</div>
         <div class="p-4 bg-gray-700 rounded shadow hover-glow">HTML/CSS</div>
         <div class="p-4 bg-gray-700 rounded shadow hover-glow">JavaScript</div>
@@ -110,8 +111,8 @@
   <!-- Resume Section -->
   <section id="resume" class="bg-gray-800 py-16 px-6 text-center">
     <h2 class="text-3xl font-bold mb-6 hover-glow">Resume</h2>
-    <p class="mb-4">Click below to download my resume in PDF format.</p>
-    <a href="https://drive.google.com/file/d/18PM5f54WhEoy4PxmbjCAEAS3rzDheXn9/view?usp=sharing" download class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-3 rounded shadow-md transition-all">Download Resume</a>
+    <p class="mb-4">Click below to view my resume.</p>
+    <a href="https://drive.google.com/file/d/1pPUT1zlbyzBODrCxvi9MefkUbv38_wZy/view?usp=drivesdk" download class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-3 rounded shadow-md transition-all" target="_blank">View Resume</a>
   </section>
 
   <!-- Contact Section -->
